--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@
     src: url("../fonts/font_PTSerif.woff2");
 }
 
+@font-face {
+    font-family: PTSerif;
+    font-weight: bold;
+    src: url("../fonts/font_PTSerif_Bold.woff2");
+}
+
 body {
     background-image: linear-gradient(0deg, rgba(239, 158, 129, 1) 0%, rgba(255, 255, 255, 1) 65%, rgba(228, 199, 189, 1) 100%);
     background-attachment: fixed
@@ -21,10 +27,8 @@ body {
 h2 {
     font-size: 1.5rem;
     font-family: PTSerif;
+    font-weight: normal;
     text-align: center;
-    max-width: 30rem;
-    padding: 1rem;
-    margin-bottom: 2rem;
     background-color: #FEE4DA;
     border: 0.1rem solid black;
     border-radius: 10px;
@@ -38,6 +42,7 @@ input {
 }
 
 a {
+    color: black;
     text-decoration: none;
     font-family: PTSerif;
 }
@@ -111,10 +116,10 @@ nav {
 
 #links a {
     font-size: 1.5rem;
-    color: black;
     padding: 0 2rem;
     border: 0.1rem solid black;
     background-color: #FEE4DA;
+    white-space: nowrap;
 }
 
 #search-field {
@@ -131,43 +136,8 @@ nav {
     gap: 1rem;
 }
 
-
-main {
+#links.show {
     display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;
-    max-width: calc(100% - 5rem);
-    margin: 2rem auto;
-    gap: 3rem;
-}
-
-section p {
-    max-width: 30rem;
-    padding: 1rem;
-    border: 0.1rem solid black;
-    border-radius: 10px;
-    background-color: #FEE4DA;
-}
-
-section {
-    display: flex;
-    flex-flow: column wrap;
-}
-
-aside {
-    max-width: 30rem;
-}
-
-aside img {
-    box-sizing: border-box;
-    width: 100%;
-    border: 0.5rem solid #E7BEB0;
-    filter: drop-shadow(0 0 0.2rem black);
-}
-
-.show {
-    display: flex !important;
 }
 
 @media screen and (min-width: 880px) {
